need to fix issue with background not showing when deployed

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 
 body {
 
-    background-image: url("src/assets/low-poly-grid-haikei.svg");
+    background-image: url("./assets/low-poly-grid-haikei.svg");
     background-position: center;
     background-size: cover;
     height: 100vh;
